# streaming-statistics-computation

./: .gitignore  LICENSE  README.md  wagon.cabal
src/: Main.hs  Model.hs
