name:                wagon
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/levinotik/wagon#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Notik
maintainer:          levinotik@gmail.com
copyright:           BSD3
category:            web
build-type:          Simple
cabal-version:       >=1.10

executable wagon
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                       BangPatterns
                       DeriveGeneric
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , conduit-extra
                     , csv-conduit
                     , text
                     , bytestring
                     , bytestring-lexing
                     , vector
                     , errors
                     , exceptions
                     , resourcet
                     , transformers
                     , containers
                     , mtl
                     , deepseq
                     , pretty-show